--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 </span>
 </div>
 <div></div>
-  <div class="powered-by">由 <a class="theme-link" target="_blank" href="https://github.com/lighterEB">DaddyHu</a> 强力驱动</div>
+  <div class="powered-by">由 <a class="theme-link" target="_blank" href="https://github.com/lighterEB">DaddyHu</a> 修改</div>
 
 
 
